# sukurappa

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: args.rs  cache.rs  cli.rs  database.rs  main.rs
src/commands/: add.rs  list.rs  mod.rs  remove.rs  watch.rs
