[package]
name = "sukurappa"
version = "0.2.0"
edition = "2021"
description = "Watch for changes on a webpage and do anything with it!"
license = "MIT"
documentation = "https://github.com/aeyoll/sukurappa"
homepage = "https://github.com/aeyoll/sukurappa"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.17", features = ["derive"] }
ureq = "2.5.0"
scraper = "0.13.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
cli-table = "0.4.7"
clokwerk = "0.3.5"
duct = "0.13.5"
log = "0.4"
pretty_env_logger = "0.4.0"
once_cell = "1.13.1"